# alicloud-tablestore-rust-sdk

./: .gitignore  Cargo.toml  README.md  table_store.proto
examples/: create_list_delete_table.rs
src/: client.rs  client_impl.rs  client_options.rs  credential.rs  endpoint.rs  error.rs  lib.rs  main.rs  protocol.rs  retry.rs
src/plainbuffer/: consts.rs  crc.rs  mod.rs  serde.rs
src/plainbuffer/tests/: crc.rs  mod.rs  primitives.rs  rows.rs
src/types/: action.rs  attr.rs  common.rs  condition.rs  create_table.rs  delete_table.rs  get_range.rs  in_return.rs  list_table.rs  mod.rs  name.rs  put_row.rs  row.rs  rowkey.rs  table_meta.rs  table_options.rs
tests/: test_concurrency.rs  test_row_operations.rs  test_table_operations.rs  utils.rs
